A bit of design work and tidy up

--- a/SmallLister.Web/Views/Home/Login.cshtml
+++ b/SmallLister.Web/Views/Home/Login.cshtml
@@ -1,5 +1,6 @@
 ﻿@model SmallLister.Web.Model.Home.LoginViewModel
 
+<article>
 <h1>Login</h1>
 
 <form action="/signin" method="post">
@@ -9,3 +10,4 @@
     </p>
     @Html.AntiForgeryToken()
 </form>
+</article>
