--- a/SmallLister.Web/Views/Home/Index.cshtml
+++ b/SmallLister.Web/Views/Home/Index.cshtml
@@ -1,3 +1,74 @@
 ﻿@model SmallLister.Web.Model.Home.IndexViewModel
 
-HOME PAGE
+<aside>
+    <nav>
+        <ul>
+            <li><a href="/todo"><b>2 due today</b></a></li>
+            <li class="sml-selected"><a href="/todo">List 1</a></li>
+            <li><a href="/todo">List 2</a></li>
+        </ul>
+    </nav>
+</aside>
+
+<article>
+    <span class="sml-toolbar"><a href="/todo">Undo</a> | Sort by: <a href="/todo">due date</a> or <a href="/todo">title</a></span>
+    <h2>List 1</h2>
+
+    <ul class="sml-list">
+        <li class="sml-list">
+            <ul class="sml-list-item">
+                <li class="sml-list-item" data-listitem="1">
+                    <div><img class="sml-list-item-drag-handle" src="/images/drag.png" height="26" width="22" title="Move" /></div>
+                    <div>
+                        Something to do 1
+                        
+                        <br/>
+                        <form method="post" action="/todo">
+                        @Html.AntiForgeryToken()
+                        <button title="Bought"><img src="/images/tick.png" height="15" width="15" /> Done</button>
+                        </form>
+                        <form method="post" action="/todo">
+                        @Html.AntiForgeryToken()
+                        <button title="Delete"><img src="/images/notes.png" height="15" width="15" /> Edit</button>
+                        </form>
+                    </div>
+                    <div>Due Tuesday<br/><span style="font-size:10pt">Repeats every week</style></div>
+                </li>
+                <li class="sml-list-item" data-listitem="1">
+                    <div><img class="sml-list-item-drag-handle" src="/images/drag.png" height="26" width="22" title="Move" /></div>
+                    <div>
+                        Something else without a due date
+
+                        <br/>
+                        <form method="post" action="/todo">
+                        @Html.AntiForgeryToken()
+                        <button title="Bought"><img src="/images/tick.png" height="15" width="15" /> Done</button>
+                        </form>
+                        <form method="post" action="/todo">
+                        @Html.AntiForgeryToken()
+                        <button title="Delete"><img src="/images/notes.png" height="15" width="15" /> Edit</button>
+                        </form>
+                    </div>
+                    <div></div>
+                </li>
+                <li class="sml-list-item" data-listitem="1">
+                    <div><img class="sml-list-item-drag-handle" src="/images/drag.png" height="26" width="22" title="Move" /></div>
+                    <div>
+                        One off task
+
+                        <br/>
+                        <form method="post" action="/todo">
+                        @Html.AntiForgeryToken()
+                        <button title="Bought"><img src="/images/tick.png" height="15" width="15" /> Done</button>
+                        </form>
+                        <form method="post" action="/todo">
+                        @Html.AntiForgeryToken()
+                        <button title="Delete"><img src="/images/notes.png" height="15" width="15" /> Edit</button>
+                        </form>
+                    </div>
+                    <div>Due tomorrow</div>
+                </li>
+            </ul>
+        </li>
+    </ul>
+</article>
