--- a/SmallLister.Web/Views/Home/Index.cshtml
+++ b/SmallLister.Web/Views/Home/Index.cshtml
@@ -16,15 +16,18 @@
 
 <article>
     <span class="sml-toolbar">Sort by: <a href="/todo">due date</a> or <a href="/todo">description</a></span>
-    <h2>List 1</h2>
+    <h2>@(Model.SelectedList == null ? "All" : Model.SelectedList.Name)</h2>
 
     <ul class="sml-list">
         <li class="sml-list">
+            @if (Model.Items.Any()) {
             <ul class="sml-list-item">
-                <li class="sml-list-item" data-listitem="1">
+            @foreach (var item in Model.Items) {
+                <li class="sml-list-item" data-listitem="@item.UserItemId">
                     <div><img class="sml-list-item-drag-handle" src="/images/drag.png" height="26" width="22" title="Move" /></div>
                     <div>
-                        <div>Something to do 1</div>
+                        <div>@item.Description</div>
+                        <div class="sml-list-item-notes">@item.Notes</div>
                         
                         <form method="post" action="/todo">
                         @Html.AntiForgeryToken()
@@ -35,49 +38,17 @@
                         <button title="Edit"><img src="/images/notes.png" height="15" width="15" /> Edit</button>
                         </form>
                     </div>
-                    <div>Due Tuesday<br/><span style="font-size:10pt">Repeats every week</style></div>
+                    <div title="@item.Due">@item.DueSummary<br/><span>@item.Repeats</span></div>
                 </li>
-                <li class="sml-list-item" data-listitem="1">
-                    <div><img class="sml-list-item-drag-handle" src="/images/drag.png" height="26" width="22" title="Move" /></div>
-                    <div>
-                        <div>Something else without a due date</div>
-
-                        <div class="sml-list-item-notes">
-                        And with some notes which has
-                        <br/>
-                        many lines
-                        </div>
-
-                        <form method="post" action="/todo">
-                        @Html.AntiForgeryToken()
-                        <button title="Done"><img src="/images/tick.png" height="15" width="15" /> Done</button>
-                        </form>
-                        <form method="post" action="/todo">
-                        @Html.AntiForgeryToken()
-                        <button title="Edit"><img src="/images/notes.png" height="15" width="15" /> Edit</button>
-                        </form>
-                    </div>
-                    <div></div>
-                </li>
-                <li class="sml-list-item" data-listitem="1">
-                    <div><img class="sml-list-item-drag-handle" src="/images/drag.png" height="26" width="22" title="Move" /></div>
-                    <div>
-                        <div>One off task</div>
-
-                        <form method="post" action="/todo">
-                        @Html.AntiForgeryToken()
-                        <button title="Done"><img src="/images/tick.png" height="15" width="15" /> Done</button>
-                        </form>
-                        <form method="post" action="/todo">
-                        @Html.AntiForgeryToken()
-                        <button title="Edit"><img src="/images/notes.png" height="15" width="15" /> Edit</button>
-                        </form>
-                    </div>
-                    <div>Due tomorrow</div>
-                </li>
+            }
             </ul>
+            } else {
+            <text>Nothing on this list, you're all done.</text>
+            }
         </li>
     </ul>
+
+@*
     <div class="pagination">
         <a href="/todo">&laquo;</a>
         <a class="pagination-active">1</a>
@@ -87,6 +58,7 @@
         <a href="/todo">12</a>
         <a href="/todo">&raquo;</a>
     </div>
+*@
 
     <div>
     <form name="sml-list-add" method="post" action="/items/add">
