--- a/SmallLister.Web/Views/Items/Edit.cshtml
+++ b/SmallLister.Web/Views/Items/Edit.cshtml
@@ -58,6 +58,8 @@
     <div>
         <label></label>
         <button type="submit" data-depends="input.sml-list-add-description">Update</button>
+        <button type="submit" name="delete" value="true" data-confirm="Are you sure you want to delete this?">Delete</button>
+        <button data-href="/">Cancel</button>
     </div>
     </fieldset>
     </form>
