--- a/SmallLister.Web/Views/Home/Login.cshtml
+++ b/SmallLister.Web/Views/Home/Login.cshtml
@@ -8,6 +8,7 @@
         Sign in using SmallAuth:
         <button type="submit">Login</button>
     </p>
+    <input type="hidden" name="returnurl" value="@Model.ReturnUrl" />
     @Html.AntiForgeryToken()
 </form>
 </article>
