Initial work on the external app integration

--- a/SmallLister.Web/Views/Shared/_Layout.cshtml
+++ b/SmallLister.Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             <div class="navbar-nav">
                 @if (Model.IsLoggedIn) {
                     <text>
-                    <a href="/lists">Edit lists</a> | <a href="/signout">Logout</a>
+                    <a href="/lists">Edit lists</a> | <a href="/profile">Profile</a> | <a href="/signout">Logout</a>
                     </text>
                 }
             </div>
